k8s/flux/cluster/apps/storage/longhorn/app/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-frontend-tailscale-ingress
  namespace: longhorn-system
spec:
  ingressClassName: tailscale
  rules:
    - 
      host: longhorn.tailscale.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  # defaultBackend:
  #   service:
  #     name: kube-prometheus-stack-grafana
  #     port:
  #       number: 80
  # tls:
  #   - hosts:
  #       - grafana.tailscale.hx
